--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "jsdoc": "^3.6.6",
     "make-dir": "^3.1.0",
     "mini-css-extract-plugin": "^1.5.0",
-    "sass": "^1.69.4",
     "node-ssh": "^11.1.1",
     "optimize-css-assets-webpack-plugin": "^6.0.0",
     "os-browserify": "^0.3.0",
@@ -80,6 +79,7 @@
     "react-hot-loader": "^4.13.0",
     "redux-devtools": "^3.7.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.69.4",
     "sass-loader": "^12.1.0",
     "scp2": "^0.5.0",
     "source-map-loader": "^3.0.0",
@@ -98,10 +98,13 @@
   "dependencies": {
     "@date-io/jalaali": "^2.10.8",
     "@date-io/moment": "1.x",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/material": "^5.14.17",
     "@persian-tools/persian-tools": "^1.6.1",
     "@react-corekit/use-idle": "^1.1.0",
     "@reduxjs/toolkit": "^1.5.1",
