--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@persian-tools/persian-tools": "^1.6.1",
     "@react-corekit/use-idle": "^1.1.0",
