--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "baseUrl": "./src",
+    "lib": ["dom", "ES2015"],
     "paths": {
       "src/*": ["./*"]
     }
