--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@sentry/react": "^6.3.1",
     "@sentry/tracing": "^6.3.1",
+    "@types/dom-mediacapture-record": "^1.0.19",
     "@types/leaflet": "^1.5.19",
     "@types/leaflet.markercluster": "^1.4.3",
     "@types/react-adaptive-hooks": "^0.0.0",
